# gws-scanner

./: .gitignore  LICENSE  config.example.toml  gws-config.example.toml  pyproject.toml  tox.ini
.github/workflows/: tox.yaml
extras/: gws-scanner.service
gws_volume_scanner/: constants.py
gws_volume_scanner/client/: __init__.py  queries.py
gws_volume_scanner/scanner/: aggregate.py  categorize.py  cli.py  config.py  daemon.py  elastic.py  errors.py  models.py  scan_single.py  scanner.py  util.py
tests/: conftest.py  test_scanning.py
