[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gws_volume_scanner"
version = "0.0.1"
description = "Tool for scanning filesystems and aggregating data in elasticsearch."
authors = ["Matt Jones <matthew.j.jones@stfc.ac.uk>", "Alex Manning <alexander.manning@stfc.ac.uk>"]

[tool.poetry.dependencies]
python = '^3.8'
elasticsearch-dsl = "^7.4.0"
elasticsearch = {version = "^7.17.0", optional = true}
tomli = {version = "^2.0.1", optional = true}
typeguard = {version = "^2.13.3", optional = true}

[tool.poetry.extras]
scanner = ["tomli", "typeguard", "elasticsearch"]

[tool.poetry.scripts]
scan_single = 'gws_volume_scanner.scanner.scan_single:main'
scan_daemon = 'gws_volume_scanner.scanner.daemon:main'

[tool.black]
line-length = 88
target-version = ['py38', 'py39']

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable=[
    "unsubscriptable-object",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
