[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gws_volume_scanner"
version = "0.0.1"
description = "Tool for scanning filesystems and aggregating data in elasticsearch."
authors = ["Matt Jones <matthew.j.jones@stfc.ac.uk>", "Alex Manning <alexander.manning@stfc.ac.uk>"]
license = "BSD - see LICENSE file in top-level package directory"

[tool.poetry.dependencies]
python = '^3.9'
elasticsearch-dsl = "^7.4.0"
elasticsearch = {version = "^7.17.0", optional = true}
tomli = {version = "^2.0.1", optional = true}
typeguard = {version = "^4.1.0", optional = true}
authlib = {version = "^1.2.1", optional = true}
httpx = {version = "^0.24.0", optional = true}
sdnotify = {version="^0.3.2", optional = true}

[tool.poetry.extras]
scanner = [
    "tomli",
    "typeguard",
    "elasticsearch",
    "authlib",
    "httpx",
    "sdnotify"
    ]

[tool.poetry.scripts]
scan_single = 'gws_volume_scanner.scanner.scan_single:main'
scan_daemon = 'gws_volume_scanner.scanner.daemon:main'

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable=[
    "unsubscriptable-object",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_subclassing_any = false
implicit_reexport = true

[[tool.mypy.overrides]]
module = "gws_volume_scanner.vendor.*"
ignore_errors = true
